# pobr_ztm

./: .gitignore  CMakeLists.txt  Common.cpp  Common.h  Log.h  Momentum.cpp  Momentum.h  Operations.cpp  Operations.h  Parameters.h  Segmentation.cpp  Segmentation.h  pattern.cpp  res.csv  res.ods  res2.csv  test.cpp  ztm.cpp
